[package]
name = "louis"
version = "0.1.0"
authors = ["muvlon <muvlon@hentzes.de>"]
edition = "2018"
description = "Rusty Bindings to liblouis"
repository = "https://github.com/whentze/liblouis-rust"
categories = ["api-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
license = "GPL-3.0"

[dependencies]
louis-sys = "0.3.0"
lazy_static = "1.1.0"
semver = "0.9.0"
widestring = "0.4.0"
log = "0.4.5"

[dev-dependencies]
clap = "2.32.0"
pretty_env_logger = "0.2.4"
assert_cmd = "0.10.1"
