[package]
name = "louis"
version = "0.6.2"
authors = ["muvlon <muvlon@hentzes.de>"]
description = "Rusty Bindings to liblouis"
repository = "https://github.com/whentze/liblouis-rust"
categories = ["api-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["braille", "accessibility", "translation"]

[workspace]
members = [
    "louis-sys",
]

[badges]
gitlab = { repository = "whentze/liblouis-rust" }

[dependencies]
louis-sys = { path = "louis-sys", version = "0.6.0" }
semver = "0.9.0"
widestring = "0.4.0"
log = "0.4.5"

[dev-dependencies]
lazy_static = "1.1.0"
clap = "2.32.0"
pretty_env_logger = "0.2.4"
assert_cmd = "0.10.1"
