[package]
name = "louis-sys"
version = "0.4.0"
authors = ["muvlon <muvlon@hentzes.de>"]
description = "Bindings to liblouis (low-level crate)"
repository = "https://github.com/whentze/liblouis-rust/louis-sys"
categories = ["external-ffi-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
license = "GPL-3.0"
links = "louis"

[dependencies]

[build-dependencies]
bindgen = "0.37.4"

[dev-dependencies]
semver-parser = "0.9.0"
lazy_static = "1.0.1"